@@ -102,6 +102,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Groovy                 Ivan F. Villanueva B.
 - GwBasic                José Gabriel Moya Yangüela
 - Haskell                Dagit
+- HicEst                 Georg Petrich
 - HQ9+                   Benny Baumann
 - Icon                   Matt Oates
 - Ini                    Deguix
